Add: Fontend - IE 11 Polyfill